# simple-smart-ptr

./: .clang-format  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
cmake/: gtest-download.cmake  gtest-setup.cmake
src/: CMakeLists.txt  ref_counter.cpp  ref_counter.h  smart_ptr.h  smart_ptr.hpp  smart_ptr.tpp
test/: CMakeLists.txt  dummy.h  ref_counter_test.cpp  smart_ptr_test.cpp
